--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     rel="stylesheet">
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="article.css">
-  <title>Emir Sehic ;; Software Dev</title> chrome
+  <title>Emir Sehic ;; Software Dev</title>
 
 </head>
-
 <body class="container">
   <header class="nav">
     <ul>
@@ -39,6 +38,7 @@
         development with skills such as SQL, Ruby, Ruby on Rails, and Go</p>
       <p>When not online, I enjoy my passion of indoor rock climbing and the gym.</p>
     </article>
+
   </main>
 
 
