--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="article.css">
+  <script src="App.ts" type="text/javascript"></script>
   <title>Emir Sehic ;; Software Dev</title>
 
 </head>
