--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="article.css">
@@ -16,6 +15,7 @@
   <title>Emir Sehic ;; Software Dev</title>
 
 </head>
+
 <body class="container">
   <header class="nav">
     <ul>
@@ -24,23 +24,8 @@
       <li><a href="./projects.html">Projects</a></li>
     </ul>
   </header>
-  <div class="name">
-    <h1>Emir Sehic</h1>
-    <h3><a href="https://www.w3schools.com/whatis/whatis_fullstack.asp" target="_blank">Full Stack Developer</a>based in
-      Melbourne, Australia.</h3>
-  </div>
-  <main>
-    <article class="about-me">
-      <h2>About</h2>
-      <p>Hi, I'm Emir. I'm a Full Stack Developer building creative applications</p>
-      <p>I am self taught developer, learning from sources such as Codecademy, Youtube and an amazing mentor and
-        brother, <a href="https://www.nerminsehic.me/" target="_blank">Nermin Sehic</a>.</p>
-      <p>While primarly focused on front end development, I have developed and broadend my experience with back end
-        development with skills such as SQL, Ruby, Ruby on Rails, and Go</p>
-      <p>When not online, I enjoy my passion of indoor rock climbing and the gym.</p>
-    </article>
 
-  </main>
+
 
 
 </body>
