--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
           deleniti dignissimos.</p>
       </div>
     </section>
+    <div class="skills">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>TYPESCRIPT</li>
+      <li>REACT</li>
+      <li>NODE.JS</li>
+    </div>
   </div>
 
 </body>
