--- a/index.html
+++ b/index.html
@@ -77,8 +77,28 @@
       <li>REACT</li>
       <li>NODE.JS</li>
     </div>
-  </div>
+    <div class="topics">
+      <h5>Today I learned</h5>
+      <p>A blog on software engineering topics!</p>
+      <div class="today-i-learned">
+        <div class="blogs">
 
+        </div>
+        <div class="blogs">
+
+        </div>
+        <div class="blogs">
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="container footer">
+      <p class=" name">Emir Sehic</p>
+      <p class="copyright">Copyright © Emir Sehic 2023</p>
+    </div>
+  </footer>
 </body>
 
 </html>
