added responsiveness to skill section

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
           deleniti dignissimos.</p>
       </div>
     </section>
-    <div class="skills">
+    <ul class="skills">
       <li>HTML</li>
       <li>CSS</li>
       <li>TYPESCRIPT</li>
       <li>REACT</li>
       <li>NODE.JS</li>
-    </div>
+    </ul>
     <div class="topics">
       <h5>Today I learned</h5>
       <p>A blog on software engineering topics!</p>
