--- a/index.html
+++ b/index.html
@@ -77,22 +77,26 @@
       <li>REACT</li>
       <li>NODE.JS</li>
     </ul>
-    <div class="topics">
-      <h5>Today I learned</h5>
-      <p>A blog on software engineering topics!</p>
-      <div class="today-i-learned">
-        <div class="blogs">
+    <div class="topic">
+      <h5>Links</h5>
+      <p>Hey! These are my links to my social pages</p>
+    </div>
+    <div class="my-links">
+      <div class="linktree">
 
-        </div>
-        <div class="blogs">
+      </div>
+      <div class="linktree">
 
-        </div>
-        <div class="blogs">
+      </div>
+      <div class="linktree">
 
-        </div>
       </div>
     </div>
+
+
+
   </div>
+
   <footer>
     <div class="container footer">
       <p class=" name">Emir Sehic</p>
