add link section css

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="my-links">
       <div class="linktree">
-
+        <a href="https://www.instagram.com/emirsehic_/" class="btn-insta"><button>Instagram</button></a>
       </div>
       <div class="linktree">
 
