--- a/index.html
+++ b/index.html
@@ -81,16 +81,17 @@
       <h5>Links</h5>
       <p>Hey! These are my links to my social pages</p>
     </div>
-    <div class="linktree">
-      <a href="https://www.instagram.com/emirsehic_/" class="btn-insta"><button>Instagram</button></a>
+    <div class="my-links">
+      <div>
+        <a href="http://"><button class="btn">Github</button></a>
+      </div>
+      <div>
+        <a href="http://"><button class="btn">LinkedIn</button></a>
+      </div>
+      <div>
+        <a href="https://www.instagram.com/emirsehic_/"><button class="btn">Instagram</button></a>
+      </div>
     </div>
-    <div class="linktree">
-
-    </div>
-    <div class="linktree">
-
-    </div>
-
 
 
 
