--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
     </div>
     <div class="my-links">
       <div>
-        <a href="http://"><button class="btn">Github</button></a>
+        <a href="http://" target="_blank"><button class="btn">Github</button></a>
       </div>
       <div>
-        <a href="http://"><button class="btn">LinkedIn</button></a>
+        <a href="http://" target="_blank"><button class="btn">LinkedIn</button></a>
       </div>
       <div>
-        <a href="https://www.instagram.com/emirsehic_/"><button class="btn">Instagram</button></a>
+        <a href="https://www.instagram.com/emirsehic_/" target="_blank"><button class="btn">Instagram</button></a>
       </div>
     </div>
 
