updated about me section

--- a/index.html
+++ b/index.html
@@ -59,19 +59,26 @@
         <section id="about-me" class="about-me">
           <h5>About</h5>
           <div class="ab-content">
-            <p><a href="#">Lorem ipsum</a> dolor sit amet consectetur, adipisicing elit. Temporibus tempore porro animi
-              placeat numquam
-              similique earum voluptate eveniet veniam! Nesciunt laudantium aliquam iure doloremque aperiam nostrum,
-              nisi
-              voluptatum cum pariatur.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem illum expedita a, officia possimus beatae
-              voluptatem officiis? Soluta voluptates sed et. Laudantium saepe accusantium quaerat porro, repudiandae
-              vitae
-              deleniti dignissimos.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem illum expedita a, officia possimus beatae
-              voluptatem officiis? Soluta voluptates sed et. Laudantium saepe accusantium quaerat porro, repudiandae
-              vitae
-              deleniti dignissimos.</p>
+            <p>Hey there, I'm Emir Sehic, your friendly neighborhood software developer and coffee aficionado.I've got
+              number years of experience in the field and I promise I won't judge you for still using Internet
+              Explorer - although,
+              seriously, you might want to consider upgrading.
+            </p>
+            <p>When I'm not busy writing code, you can find me indulging in my passion for coffee. In fact, I've become
+              so obsessed with the perfect cup of joe that I've started roasting my own beans in my spare time. I know,
+              I know, it's a slippery slope, but there's just something about that fresh roasted aroma that gets me
+              going.
+              But don't worry, I don't spend all my time cooped up indoors. I also love hitting the gym and indoor rock
+              climbing to work off all that caffeine - gotta keep the heart rate up, you know?
+            </p>
+            <p>All jokes aside, attention to detail is one of my strong suits, and I'm passionate about delivering
+              high-quality work to my clients. I stay up-to-date with the latest trends and technologies in the
+              industry, ensuring that my skills are always top-notch.
+              So, if you're in need of a developer who knows the ins and outs of web development and also happens to
+              make a mean cup of coffee, then drop me a line at <em class="email">esehic.biz@gmail.com</em>. Let's chat
+              about your
+              project and
+              see how we can work together to make it a success.</p>
           </div>
         </section>
         <div class="skills">
