--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="fullheight">
-    <div>
+    <div class="wrapper">
       <div class="container">
         <header class="header">
           <nav>
@@ -59,7 +59,7 @@
         <section id="about-me" class="about-me">
           <h5>About</h5>
           <div class="ab-content">
-            <p>Hey there, I'm Emir Sehic, your friendly neighborhood software developer and coffee aficionado.I've got
+            <p>Hey there, I'm Emir Sehic, your friendly neighborhood software developer and coffee aficionado. I've got
               number years of experience in the field and I promise I won't judge you for still using Internet
               Explorer - although,
               seriously, you might want to consider upgrading.
@@ -91,16 +91,11 @@
         <div class="topic">
           <h5>Links</h5>
           <p>Hey! These are my links to my social pages</p>
-        </div>
-        <div class="my-links">
-          <div>
-            <a href="http://" target="_blank"><button class="btn">Github</button></a>
-          </div>
-          <div>
-            <a href="http://" target="_blank"><button class="btn">LinkedIn</button></a>
-          </div>
-          <div>
-            <a href="https://www.instagram.com/emirsehic_/" target="_blank"><button class="btn">Instagram</button></a>
+          <div class="my-links">
+            <a href="http://" target="_blank" class="btn-link"><button>Github</button></a>
+            <a href="http://" target="_blank" class="btn-link"><button>LinkedIn</button></a>
+            <a href="https://www.instagram.com/emirsehic_/" target="_blank"
+              class="btn-link"><button>Instagram</button></a>
           </div>
         </div>
       </div>
