social links added/fixed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </ul>
         </nav>
         <div class="socials">
-          <a href="https://github.com/Emzahx" target="_blank">
+          <a href="https://www.linkedin.com/in/emir-sehic-000713271/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16" fill="none" role="img"
               aria-labelledby="qvda56xc6i2tioyvsngwju9ow7k5xk5" class="octicon">
               <title id="qvda56xc6i2tioyvsngwju9ow7k5xk5">LinkedIn</title>
@@ -95,8 +95,9 @@
         <h5>Links</h5>
         <p>Hey! These are my links to my social pages</p>
         <div class="my-links">
-          <a href="http://" target="_blank" class="btn-link"><button>Github</button></a>
-          <a href="http://" target="_blank" class="btn-link"><button>LinkedIn</button></a>
+          <a href="https://github.com/Emzahx" target="_blank" class="btn-link"><button>Github</button></a>
+          <a href="https://www.linkedin.com/in/emir-sehic-000713271/" target="_blank"
+            class="btn-link"><button>LinkedIn</button></a>
           <a href="https://www.instagram.com/emirsehic_/" target="_blank"
             class="btn-link"><button>Instagram</button></a>
         </div>
