cleaned up weird spaces

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Space+Grotesk:wght@400;500;600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="main.css" />
-  <title>Emir Sehic :: Software Dev</title>
+  <title>Emir Sehic :: Agile Coach</title>
 </head>
 
 <body>
@@ -74,7 +74,7 @@
           </p>
           <p>I follow the Agile Manifesto like a roadmap to sanity—except I also believe it should include: "Value
             caffeine over sleep". My goal? Delivering quality work, fostering collaboration, and making sure no one on
-            the team ever runs out of coffee. (Or energy drinks. Let’s be real, I’m flexible.)<em
+            the team ever runs out of coffee. (Or energy drinks. Let’s be real, I’m flexible.) <em
               class="email">sehic.e95@gmail.com</em>. Let's chat
             about your
             project and
