--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </ul>
         </nav>
         <div class="socials">
-          <a href="https://www.linkedin.com/in/emir-sehic-000713271/" target="_blank">
+          <a href="https://www.linkedin.com/in/emir-sehic/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16" fill="none" role="img"
               aria-labelledby="qvda56xc6i2tioyvsngwju9ow7k5xk5" class="octicon">
               <title id="qvda56xc6i2tioyvsngwju9ow7k5xk5">LinkedIn</title>
