--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
           </p>
           <p>I follow the Agile Manifesto like a roadmap to sanity—except I also believe it should include: "Value
             caffeine over sleep". My goal? Delivering quality work, fostering collaboration, and making sure no one on
-            the team ever runs out of coffee. (Or energy drinks. Let’s be real, I’m flexible.) <em
-              class="email">sehic.e95@gmail.com</em>. Let's chat
-            about your
-            project and
-            see how we can work together to make it a success.</p>
+            the team ever runs out of coffee. (Or energy drinks. Let’s be real, I’m flexible.) Lets chat <em
+              class="email">sehic.e95@gmail.com</em> about your project and see how we can work together to
+            make it a success.</p>
         </div>
       </section>
       <div class="skills">
