--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           </p>
           <p>I follow the Agile Manifesto like a roadmap to sanity—except I also believe it should include: "Value
             caffeine over sleep". My goal? Delivering quality work, fostering collaboration, and making sure no one on
-            the team ever runs out of coffee. (Or energy drinks. Let’s be real, I’m flexible.) Lets chat <em
-              class="email">sehic.e95@gmail.com</em> about your project and see how we can work together to
+            the team ever runs out of coffee. (Or energy drinks. Let’s be real, I’m flexible.) Lets chat, send me an
+            email at <em class="email">sehic.e95@gmail.com</em> about your project and see how we can work together to
             make it a success.</p>
         </div>
       </section>
