removed option for email link for the time

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p>I follow the Agile Manifesto like a roadmap to sanity—except I also believe it should include: "Value
             caffeine over sleep". My goal? Delivering quality work, fostering collaboration, and making sure no one on
             the team ever runs out of coffee. (Or energy drinks. Let’s be real, I’m flexible.) Lets chat, send me an
-            email at <a href class="email">sehic.e95@gmail.com</a> about your project and see how we can work together
+            email at <em class="email">sehic.e95@gmail.com</em> about your project and see how we can work together
             to
             make it a success.</p>
         </div>
