--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
         <h5>About</h5>
         <div class="ab-content">
           <p>
-            Hey, I’m Emir but some call me Jake, it's a fun story so just ask me about it! I'm currently working towards
-            becoming a Certified Scrum Master and Agile Project Manager—basically, I help teams work smarter, not
-            harder, while also making sure no one misses their daily coffee break (or energy drink, if you're like me).
+            Hi, I’m Emir (though some close people call me Jake—there’s a story behind it, feel free to ask, it’s
+            somewhat interesting!). I’m a web developer passionate about building clean, responsive, and user-friendly
+            web applications.
           </p>
-          <p>On a mission to become a Certified Scrum Master (CSM), so I can organize chaos and turn it into productive
-            sprints—probably fueled by coffee (or three).
-            Agile is my jam, and I live by the Agile Manifesto: "Deliver value, collaborate, and don’t let anyone forget
-            their caffeine."
+          <p>
+            I have experience with frontend technologies including HTML, CSS, JavaScript, and React. On the backend, I
+            am skilled in using Node.js. For deployment, I am experienced with platforms like Vercel, ensuring seamless
+            CI/CD pipelines. I am proficient in GitHub for version control, collaboration, and repository management.
+            Additionally, I have a solid understanding of Agile and Scrum methodologies, which helps me keep projects
+            organized and on track.
           </p>
-          <p>I follow the Agile Manifesto like a roadmap to sanity—except I also believe it should include: "Value
-            caffeine over sleep". My goal? Delivering quality work, fostering collaboration, and making sure no one on
-            the team ever runs out of coffee. (Or energy drinks. Let’s be real, I’m flexible.) Lets chat, send me an
-            email at <a href="mailto:sehic.e95@gmail.com" class="email">sehic.e95@gmail.com</a> about your project and
-            see how we can work together
-            to
-            make it a success.</p>
+          <p>When I'm not coding, you’ll probably find me with a coffee (or any caffeinated beverage) to keep the
+            creative juices flowing. I’m always open to new collaborations. Feel free to reach out @ <a
+              href="mailto:sehic.e95@gmail.com" class="email">sehic.e95@gmail.com</a> if you want to build something
+            great together!
+          </p>
         </div>
       </section>
       <div class="skills">
