--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="article.css">
   <script src="App.ts" type="text/javascript"></script>
-  <title>Emir Sehic :: Software Dev</title>
+  <title>Emir Sehic :: Scrum Developer</title>
 
 </head>
 
