re-did the bio to make it less sheit

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <div class="ab-content">
           <p>
             Hi, I’m Emir (though some close people call me Jake—there’s a story behind it, feel free to ask, it’s
-            somewhat interesting!). I’m a web developer passionate about building clean, responsive, and user-friendly
-            web applications.
+            somewhat interesting, and I love taling about it!). I am currently learning to be a web developer.
           </p>
           <p>
-            I have experience with frontend technologies including HTML, CSS, JavaScript, and React. On the backend, I
-            am skilled in using Node.js. For deployment, I am experienced with platforms like Vercel, ensuring seamless
+            I have experience with frontend technologies including HTML, CSS and I am learning more about Javascript and
+            React. On the backend, I am learning more about Node.JS. For deployment, I am experienced with platforms
+            like Vercel, ensuring seamless
             CI/CD pipelines. I am proficient in GitHub for version control, collaboration, and repository management.
             Additionally, I have a solid understanding of Agile and Scrum methodologies, which helps me keep projects
             organized and on track.
