--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Space+Grotesk:wght@400;500;600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="main.css" />
-  <title>Emir Sehic :: Scrum Developer</title>
+  <title>ES :: Front End Dev</title>
 </head>
 
 <body>
@@ -32,6 +32,7 @@
         <nav>
           <ul>
             <li><a href="./index.html">Home</a></li>
+            <li><a href="./blog.html"></a></li>
             <li><a href="./projects.html">Projects</a></li>
           </ul>
         </nav>
@@ -96,8 +97,8 @@
           <a href="https://github.com/Emzahx" target="_blank" class="btn-link"><button>Github</button></a>
           <a href="https://www.linkedin.com/in/emir-sehic/" target="_blank"
             class="btn-link"><button>LinkedIn</button></a>
-          <a href="https://www.instagram.com/emirsehic_/" target="_blank"
-            class="btn-link"><button>Instagram</button></a>
+          <!--<a href="https://www.instagram.com/emirsehic_/" target="_blank"
+            class="btn-link"><button>Instagram</button></a>-->
         </div>
       </div>
     </div>
