fixed a typo and removed blog for now

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav>
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./blog.html"></a></li>
+            <!--<li><a href="./blog.html"></a></li>-->
             <li><a href="./projects.html">Projects</a></li>
           </ul>
         </nav>
@@ -66,7 +66,7 @@
         <div class="ab-content">
           <p>
             Hi, I’m Emir (though some close people call me Jake—there’s a story behind it, feel free to ask, it’s
-            somewhat interesting, and I love taling about it!). I am currently learning to be a web developer.
+            somewhat interesting, and I love talking about it!). I am currently learning to be a web developer.
           </p>
           <p>
             I have experience with frontend technologies including HTML, CSS and I am learning more about Javascript and
