--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav>
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <!--<li><a href="./blog.html"></a></li>-->
+            <li><a href="./blog.html">Blog</a></li>
             <li><a href="./projects.html">Projects</a></li>
           </ul>
         </nav>
