fixed no head close tag on blog.html

--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="article.css">
   <script src="App.ts" type="text/javascript"></script>
   <title>ES :: Front End Dev</title>
+  </head>
 
 <body>
   <div class="container">
