--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <p>Hey, I am Emir. I'm a self-taugh developer who loves to build cool things for the web! I have been coding for
           1 year now, and I am always looking for new things to learn. I am currently working on a few new projects, but
           I am always open to new opportunities.</p>
+        <div>
+          <img class="tri-style" src="./assets/me.BIdPZHME_Z4IP3V.webp" alt="3 Triangle Image">
+        </div>
       </div>
       <div class="about-me">
         <h1>About Me</h1>
