--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         </ul>
       </header>
       <div class="hero">
-        <h1>Emir Sehic</h1>
-        <h4>Full Stack Developer from Australia</h4>
+        <div>
+          <h1>Emir Sehic</h1>
+          <h4>Full Stack Developer from Australia</h4>
+        </div>
         <p>Hey, I am Emir. I'm a self-taugh developer who loves to build cool things for the web! I have been coding for
           1 year now, and I am always looking for new things to learn. I am currently working on a few new projects, but
           I am always open to new opportunities.</p>
