fixed hero and css header

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         <div>
           <h1>Emir Sehic</h1>
           <h4>Full Stack Developer from Australia</h4>
+          <p>Hey, I am Emir. I'm a self-taugh developer who loves to build cool things for the web! I have been coding
+            for
+            1 year now, and I am always looking for new things to learn. I am currently working on a few new projects,
+            but
+            I am always open to new opportunities.</p>
         </div>
-        <p>Hey, I am Emir. I'm a self-taugh developer who loves to build cool things for the web! I have been coding for
-          1 year now, and I am always looking for new things to learn. I am currently working on a few new projects, but
-          I am always open to new opportunities.</p>
         <div>
           <img class="tri-style" src="./assets/me.BIdPZHME_Z4IP3V.webp" alt="3 Triangle Image">
         </div>
