--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
   </div>
   <footer>
-    <!--Use the below for Free Icons if using Icons8-->
+    <!--Use the below for Free SVG Icons if using Icons8-->
     <!--<a target="_blank" href="https://icons8.com/icon/23028/html-5"></a> icon by <a target="_blank"
       href="https://icons8.com">Icons8</a>-->
   </footer>
