removed unused css and added a project snapshot section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
         <p>REACT</p>
         <p>NODE.JS</p>
       </div>
+      <div class="projects">
+        <h5>Check back here soon for my latest project snapshots!</h5>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas nostrum reiciendis ab necessitatibus
+          tempora est officiis quis magni architecto libero fuga explicabo nulla nihil delectus, mollitia repudiandae
+          culpa deleniti debitis.</p>
+      </div>
     </div>
   </div>
   <div class="spacer"></div>
